src/test/deca/syntax/invalid/del_post_inst_obj.deca
//Description
//    Vérifier la decl de class
//
//Résultats :
//    Erreur Syntaxique ligne 11
//

{
Test.appel();
int a = 4;
}
